--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
     a:visited {
       color: purple;
     }
-
     .card.link {
       min-width: 200px;
     }
-
-
     html,
     body,
     #root {
@@ -25,7 +22,6 @@
       max-width: 100vw;
       max-height: 100vh;
     }
-
     .scrolling-body {
       max-height: 500px;
       overflow-y: auto;
@@ -36,7 +32,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
