--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-bootstrap@2.10.2/dist/react-bootstrap.min.js"></script>
   <style>
     a:visited {
       color: purple;
@@ -35,7 +33,9 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <h1>V1.2</h1>
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
